2010-08-05  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        targetReferenceFromResource() in SVGResources.cpp is missing an ENABLE(FILTERS) guard
        https://bugs.webkit.org/show_bug.cgi?id=43550

        Also updates an existing ENABLE(FILTERS) guard to avoid a compiler
        warning 'case FilterResourceType not handled in switch' when FILTERS
        is not enabled.

        No new tests, build fix only.

        * rendering/SVGResources.cpp:
        (WebCore::targetReferenceFromResource):
        (WebCore::SVGResources::resourceDestroyed):


Canonical link: https://commits.webkit.org/55550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64732 268f45cc-cd09-0410-ab3c-d52691b4dbfc